--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto&display=swap");
-
+/* global styles */
 * {
   box-sizing: border-box;
   margin: 0;
@@ -11,23 +11,88 @@ body {
   height: 100vh;
 }
 
-.container {
-  position: relative;
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+  border: 0;
+  clip: rect(0 0 0 0);
+}
+
+/* slider */
+.slider {
   overflow: hidden;
   width: 100vw;
   height: 100vh;
+  position: relative;
 }
 
-.sidebar {
+/* main slide */
+.main-slide__list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 35%;
+  width: 65%;
+  transition: transform 0.5s ease-in-out;
+}
+
+.main-slide__item {
+  height: 100%;
+}
+
+.main-slide__image {
+  object-fit: cover;
+  object-position: center center;
+  height: 100%;
+  width: 100%;
+}
+
+/* controls */
+.controls__button {
+  position: absolute;
+  left: 35%;
+  top: 50%;
+  z-index: 100;
+}
+
+.controls__down-button--down {
+  transform: translateX(-100%);
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+}
+
+.controls__down-button--up {
+  transform: translateY(-100%);
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
+/* sidebar */
+.sidebar__list {
   height: 100%;
   width: 35%;
   position: absolute;
   top: 0;
   left: 0;
   transition: transform 0.5s ease-in-out;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
-.sidebar > div {
+.sidebar__title {
+  font-size: 40px;
+  margin-bottom: 10px;
+  margin-top: -30px;
+}
+.sidebar__item {
   height: 100%;
   width: 100%;
   display: flex;
@@ -37,29 +102,22 @@ body {
   color: #fff;
 }
 
-.sidebar h1 {
-  font-size: 40px;
-  margin-bottom: 10px;
-  margin-top: -30px;
+.sidebar__item--first {
+  background: linear-gradient(229.99deg, #11dee9 -26%, #017e8b 145%);
 }
 
-.main-slide {
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 35%;
-  width: 65%;
-  transition: transform 0.5s ease-in-out;
+.sidebar__item--second {
+  background: linear-gradient(215.32deg, #f90306 -1%, #9e0706 124%);
+}
+.sidebar__item--third {
+  background: linear-gradient(221.87deg, #8308ea 1%, #5305af 128%);
 }
 
-.main-slide > div {
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center center;
-  height: 100%;
-  width: 100%;
+.sidebar__item--fourth {
+  background: linear-gradient(220.16deg, #ffe101 -8%, #f39102 138%);
 }
 
+/* button */
 button {
   background-color: #fff;
   border: none;
@@ -75,23 +133,4 @@ button:hover {
 
 button:focus {
   outline: none;
-}
-
-.container .controls button {
-  position: absolute;
-  left: 35%;
-  top: 50%;
-  z-index: 100;
-}
-
-.container .controls .down-button {
-  transform: translateX(-100%);
-  border-top-left-radius: 5px;
-  border-bottom-left-radius: 5px;
-}
-
-.container .controls .up-button {
-  transform: translateY(-100%);
-  border-top-right-radius: 5px;
-  border-bottom-right-radius: 5px;
 }
