--- a/styles/style.css
+++ b/styles/style.css
@@ -103,18 +103,18 @@ body {
 }
 
 .sidebar__item--first {
-  background: linear-gradient(229.99deg, #11dee9 -26%, #017e8b 145%);
+  background: linear-gradient(86.16deg, #a85f06 -38%, #343c3b 138%);
 }
 
 .sidebar__item--second {
-  background: linear-gradient(215.32deg, #f90306 -1%, #9e0706 124%);
+  background: linear-gradient(181deg, #191919 -1%, #ebebeb 138%);
 }
 .sidebar__item--third {
-  background: linear-gradient(221.87deg, #8308ea 1%, #5305af 128%);
+  background: linear-gradient(276deg, #929635 1%, #846934 82%);
 }
 
 .sidebar__item--fourth {
-  background: linear-gradient(220.16deg, #ffe101 -8%, #f39102 138%);
+  background: linear-gradient(166deg, #b4b3b4 -111%, #212234 84%);
 }
 
 /* button */
